# routes-calculator

./: .dockerignore  .editorconfig  .env.cli.example  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  ROUTES-CALCULATION-LOGIC.md  alembic.ini  db-migrate.sh  deploy.Dockerfile  deploy.sh  docker-2.yml  docker-bake.hcl  docker-compose-dev.yml  docker-compose.hot-dev.backend.yml  docker-compose.hot-dev.yml  docker-compose.local.yml  docker-compose.migrate.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.html  local.Dockerfile  main.py  package-lock.json  package.json  passenger_wsgi.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-dev.sh  stop-dev.sh
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  project-build.yml  project-deploy.yml  project-lint.yml  project-tests.yml
.opencode/: opencode.json
.opencode/skills/routes-calculation-debug/: SKILL.md
Node/: Dockerfile
Node/apps/admin-frontend/: eslint.config.mjs  package-lock.json  package.json
Node/apps/user-frontend/: .oxfmtrc.json  eslint.config.ts  package-lock.json
Python/: .dockerignore  Dockerfile  requirements-dev.txt  requirements-tests.txt  requirements.txt
Python/alembic/: env.py
Python/alembic/versions/: 0327cc7e8404_v2_0_add_services.py  2b4c35a59f44_v2_7_routes_timetable.py  2c0895015a0a_v2_2_add_fca_fob.py  2cfce045e792_v1_2_correct_indexes_names.py  4f82bf1a958e_v2_5_mandatory_default_services.py  569fbebd37d5_v1_3_normalize_drop.py  63b7b144c602_v2_10_add_setting_locked.py  814b3b174c24_v2_6_add_lifo_lilo.py  910837e6c4b9_v1_9_expand_company_name.py  9721e23b56a3_v2_9_settings.py  a93d697f85b1_v2_4_add_container_into_services.py  c2a5990862b7_v2_3_next_segm_end_point.py  c572f6e1d3d9_v2_1_add_services_internal_name.py  e8f3a1b2c4d5_v2_8_demo_guests.py
Python/apps/auth/: config.py  main.py
Python/apps/back_admin/: autodiscover.py  jwt_middleware.py
Python/apps/backend/: autodiscover.py  (+1 more)
Python/cli/: auth.py  config.py  db_explorer.py  main.py  route_query.py  sheets_reader.py
Python/tests/: conftest.py  test_auth_utils.py  test_deduplication.py  test_demo_guest_repo.py  test_fesco_api_client.py  test_get_points.py  test_get_rates.py  test_internal_aggregators.py  test_profit.py  test_route_calculation.py  test_route_calculation_v3_sse.py  test_setting_cache.py
Python/tools/: auto-pdf.py  har_analyzer.py
alembic/: env.py
alembic/versions/: 315657e09064_1_6_split_container_terms.py  638ad167c6bd_v1_4_price_route_constraint_delete_.py  8180d7e4964c_v1_1_add_container_owner.py  ab161f8f7484_v1_5_remove_legacy_routes.py  cb29d1f22aab_v1_8_add_through_routes.py  dd480aa43c0c_v1_0_init.py  f1014438b53f_v1_7_move_fields_price_to_route.py
apps/auth/: main.py  settings.py
apps/back-admin/: main.py
apps/back_admin/: auth_settings.py  autodiscover.py  config.py  database.py  jwt_middleware.py  main.py
apps/backend/: autodiscover.py  config.py  main.py
apps/front-admin/: .eslintrc  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
apps/frontend/: index.html
apps/new-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/shared/: database.py  responses.py
database-dev-version/: README.md
database-versions/: v1.0.HUB.Jun.sql  v1.1.HUB.Jun_Jul.sql  v1.2.HUB.Jul.sql  v2.0.HUB_TLC.Jul.sql  v2.1.HUB_TLC.Jul.sql  v2.2.HUB_TLC.Jul_extended_to_Aug.sql  v3.0.HUB_TLC.Aug.sql
docs/: pipeline.md
docs/frontend/: antipatterns.md  react.md  structure.md
docs/git/: git-about.md  git-commit.md  git-flow.md  git-rebase.md  ide-features.md
html/: routes-calc-form.html
lib/bootstrap5/: bootstrap.css
res/js/: alerts.js  autocomplete.js  baseUrl.js  calculating.js  rates.js  transformers.js
resources/: .gitignore
resources/back_admin/: uploader_fields_config.json
scripts/: alembic-proxy.bat  alembic-proxy.sh  export-python-dependencies.bat  export-python-dependencies.sh  prod-update.sh  rebuild-hot-dev.bat  rebuild-hot-dev.sh  rebuild.bat  rebuild.sh  run-dev.bat  run-dev.sh  run-test.sh  stop-dev.bat
src/: autodiscover.py  currency_converter.py  database.py  main.py  mapper_decorator.py  requests.py
src/utils/: currency_converter.py  string_formatters.py
tests/: test_routes.py
tools/: auto-pdf.py  har_analyzer.py  loading_data_to_db.py  loading_data_to_db.py.dump  migrate_data_v2_v3.py
(+491 files in other folders)
