[project]
name = "TransferEnigma"
version = "1.0.0"
description = "Transfer Enigma - routes calculator (rail and sea)"
authors = [{email = "Daniel Panov <daniilpanov016@gmail.com>"}]
requires-python = "^3.14"

[tool.poetry]
name = "TransferEnigma"
version = "1.0.0"
description = "Transfer Enigma - routes calculator (rail and sea)"
authors = ["Daniel Panov <daniilpanov016@gmail.com>"]
packages = [
  { include = "main.py", from = "src" }
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
bcrypt = "*"
pandas = "*"
python = "^3.14"
aiomysql = "*"
sqlalchemy = "*"
pydantic = "*"
aiohttp = "*"
python-dotenv = "*"
pycbrf = "*"
fastapi = "*"
jinja2 = "*"
fastapi_another_jwt_auth = "*"
uvicorn = { extras = ["standard"], version = "*" }
sqlparse = "^0.5.5"
python-multipart = "^0.0.22"
alembic = "^1.18.4"
gspread = "^6.2.1"
gspread-dataframe = "^4.0.0"
openpyxl = "^3.1.5"
redis = "^8.0.0"

[tool.poetry.group.dev.dependencies]
black = {version = "*", python = "^3.14"}
pre-commit = "*"
ipython = "*"
icecream = "*"
pynacl = "*"


[tool.poetry.group.tests.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
httpx = "^0.28.1"
aiosqlite = "^0.22.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["Python/tests"]
pythonpath = ["Python/apps"]

[tool.isort]
profile = "black"
verbose = false
py_version = "310"
skip_gitignore = true
line_length = 100
use_parentheses = true
include_trailing_comma = true
known_fastapi = ["fastapi", "starlette"]
known_third_party = []
sections = [
  "STDLIB",
  "FASTAPI",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
no_lines_before = "LOCALFOLDER"
